Ændrede det til at bruge HttpClient